CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

INCLUDE(${CMAKE_ROOT}/Modules/ExternalProject.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/GNUInstallDirs.cmake)
INCLUDE(external/libseccomp.cmake)
INCLUDE(external/libcap.cmake)
INCLUDE(external/libtclap.cmake)

SET(CMAKE_C_FLAGS "-std=gnu99 -Wall -static")
SET(CMAKE_C_FLAGS_DEBUG "-g -pedantic")
SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_CXX_FLAGS "-std=gnu++14 -Wall -static")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -pedantic")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3")

EXECUTE_PROCESS(COMMAND uname -r
    OUTPUT_VARIABLE BUILD_KERNEL_RELEASE)
ADD_DEFINITIONS('-DBUILD_KERNEL_RELEASE="${BUILD_KERNEL_RELEASE}"')

ENABLE_TESTING()

IF(NOT DEFINED WITH_DOCS)
    SET(WITH_DOCS "YES")
ENDIF()
IF(NOT WITH_DOCS MATCHES "YES|NO")
    MESSAGE(FATAL_ERROR "WITH_DOCS should be one of YES, NO")
ENDIF()
IF(WITH_DOCS STREQUAL "YES")
    INCLUDE(external/scdoc.cmake)
    ADD_SUBDIRECTORY(doc)
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(boxes)
ADD_SUBDIRECTORY(test)
