ADD_CUSTOM_COMMAND(OUTPUT sio2jail.1
    COMMAND ${scdoc_BINARY_PATH} <${CMAKE_CURRENT_SOURCE_DIR}/sio2jail.1.scd >sio2jail.1
    DEPENDS sio2jail.1.scd)

ADD_CUSTOM_TARGET(doc ALL DEPENDS sio2jail.1 scdoc)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/sio2jail.1 DESTINATION "${CMAKE_INSTALL_FULL_MANDIR}/man1")
